# mathsite

./: README.md  manage.py  pyproject.toml
mathsite/: asgi.py  settings.py  urls.py  wsgi.py
resources/: admin.py  forms.py  urls.py  views.py
resources/migrations/: 0001_initial.py  0002_alter_topic_created_by_alter_topic_updated_by_and_more.py  0003_alter_resource_link.py
resources/models/: __init__.py  resource.py  user.py
resources/templates/resources/: all_resources.html  base.html  create_resource.html  deleted_resource.html  edit_resource.html  resource.html  resources_list.html  update_resource.html
src/mathsite/: __init__.py
