[project]
name = "mathsite"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "toonarmycaptain", email = "toonarmycaptain@hotmail.com" }
]
dependencies = [
    "django>=5.0.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "ruff>=0.5.1",
    "mypy>=1.10.1",
    "django-stubs>=5.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mathsite"]
